Restaurant frontend updated